// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useContractHeaderSetup should set up the header correctly for trade in dispute 1`] = `
<Header
  icons={[]}
  titleComponent={
    <ContractTitle
      id="123"
    />
  }
/>
`;

exports[`useContractHeaderSetup should show the cancel icon if the contract can be cancelled 1`] = `
<ContractTitle
  id="123"
/>
`;

exports[`useContractHeaderSetup should show the confirm payment help icon if the contract is in the seller view and requires a payment 1`] = `
<ContractTitle
  id="123"
/>
`;

exports[`useContractHeaderSetup should show the make payment help icon if the contract is in the buyer view and requires a payment 1`] = `
<ContractTitle
  id="123"
/>
`;
